# setupcfg.py

./: README.md  requirements.txt  setup.cfg  setup.py  todo.txt
setupcfg/: __init__.py  cfg.py  values.py
tests/setupcfg/examples/Setupcfg/load(path)/: path.py
tests/setupcfg/examples/Setupcfg/representation/: dict.py  str.py
tests/setupcfg/examples/cli/metadata/: description.sh  keywords.sh  name.sh  url.sh  version.sh
tests/setupcfg/examples/cli/options/: install_requires.sh  packages.sh  py_modules.sh  scripts.sh
tests/setupcfg/examples/functions/: get.py  load.py  setup.cfg
