# https://pypi.org/project/setupcfg-generator/
[metadata]
name = setupcfg
version = 2019.4.13
url = https://github.com/looking-for-a-job/setupcfg.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = setup.cfg setuptools setup

[options]
install_requires = 
	click
	orderdict
	public
	setuptools
	write
packages = 
	setupcfg
	setupcfg.metadata
	setupcfg.options
